[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Textures/pauseNotPaused.png" type="Texture" id=1]
[ext_resource path="res://Resources/Textures/textureBarOver.png" type="Texture" id=2]
[ext_resource path="res://Resources/Textures/textureBarBackgroundAndProgress.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/homeButton.png" type="Texture" id=4]
[ext_resource path="res://ChallengeGame/InGameGUI/inGameGUIChallenge.gd" type="Script" id=5]
[ext_resource path="res://Resources/Fonts/titanOneRegular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 6 )

[node name="inGameGUICanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 5 )

[node name="inGameGUIMain" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 200.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUIBackground" type="ColorRect" parent="inGameGUIMain"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButtonContainer" type="MarginContainer" parent="inGameGUIMain"]
margin_right = 200.0
margin_bottom = 200.0
custom_constants/margin_right = 45
custom_constants/margin_top = 45
custom_constants/margin_left = 45
custom_constants/margin_bottom = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButton" type="TextureButton" parent="inGameGUIMain/pauseButtonContainer"]
margin_left = 45.0
margin_top = 45.0
margin_right = 155.0
margin_bottom = 155.0
rect_clip_content = true
size_flags_vertical = 3
button_mask = 7
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButtonContainer" type="MarginContainer" parent="inGameGUIMain"]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 200.0
custom_constants/margin_right = 100
custom_constants/margin_top = 45
custom_constants/margin_left = -10
custom_constants/margin_bottom = 45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuButton" type="TextureButton" parent="inGameGUIMain/menuButtonContainer"]
margin_left = -10.0
margin_top = 45.0
margin_right = 100.0
margin_bottom = 155.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="pauseButtonTween" type="Tween" parent="."]

[node name="menuButtonScaleTween" type="Tween" parent="."]

[node name="menuButtonPositionTween" type="Tween" parent="."]

[node name="levelProgress" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -431.335
margin_top = 80.0
margin_right = -81.3347
margin_bottom = 120.0
step = 0.0
value = 10.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="levelLabel" type="Label" parent="levelProgress"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -362.0
margin_top = -99.0
margin_right = -22.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="inGameGUIMain/pauseButtonContainer/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="inGameGUIMain/menuButtonContainer/menuButton" to="." method="_on_menuButton_pressed"]
